# anchor-dice-2023

./: Anchor.toml  Cargo.toml  package.json
crates/anchor-sysvar-instruction/: Cargo.toml
crates/anchor-sysvar-instruction/src/: lib.rs
crates/anchor-sysvar-instruction/src/instructions/: ed25519.rs  mod.rs
programs/soldice-anchor/: Cargo.toml
programs/soldice-anchor/src/: errors.rs  lib.rs
programs/soldice-anchor/src/contexts/: init.rs  mod.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs
programs/soldice-anchor/src/state/: mod.rs
tests/: soldice-anchor.ts
